--- a/index.html
+++ b/index.html
@@ -91,15 +91,30 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/section2/1.jpg" alt="computer" width="360" />
+            <img
+              src="./images/section2/1.jpg"
+              alt="computer"
+              width="360"
+              height="300"
+            />
           </li>
 
           <li>
-            <img src="./images/section2/2.jpg" alt="addition" width="360" />
+            <img
+              src="./images/section2/2.jpg"
+              alt="addition"
+              width="360"
+              height="300"
+            />
           </li>
 
           <li>
-            <img src="./images/section2/3.jpg" alt="mobilie" width="360" />
+            <img
+              src="./images/section2/3.jpg"
+              alt="mobilie"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
@@ -113,13 +128,19 @@
               src="./images/section3/1mark.jpg"
               alt="Mark Guerrero"
               width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./images/section3/2tom.jpg" alt="Tom Ford" width="264" />
+            <img
+              src="./images/section3/2tom.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -129,6 +150,7 @@
               src="./images/section3/3camila.jpg"
               alt="Camila Garcia"
               width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -139,6 +161,7 @@
               src="./images/section3/4daniel.jpg"
               alt="Daniel Wilson"
               width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -151,7 +174,8 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
